--- a/src/app/solicitacao-servico/orcamento-page/orcamento-page.component.html
+++ b/src/app/solicitacao-servico/orcamento-page/orcamento-page.component.html
@@ -55,14 +55,14 @@
                         </td>
                         <td style="width:12%; min-width:6rem;">
                             <span class="p-column-title">Status</span>
-                            <b>{{orcamento.status}}</b>
+                            <b>{{orcamento.status === 'INSTALACAO_CRIADA' ? 'INSTALAÇÃO CRIADA' : orcamento.status}}</b>
                         </td>
                         <td>
                             <div class="flex">
                                 <button pButton pRipple icon="pi pi-eye" class="p-button-rounded p-button-info mr-2" (click)="viewOrcamento(orcamento)"></button>
                                 <button pButton pRipple icon="pi pi-check" class="p-button-rounded p-button-success mr-2" (click)="aprovarOrcamento(orcamento)" *ngIf="orcamento.status === 'PENDENTE'"></button>
                                 <button pButton pRipple icon="pi pi-times" class="p-button-rounded p-button-danger" (click)="reprovarOrcamento(orcamento)" *ngIf="orcamento.status === 'PENDENTE'"></button>
-                                <button pButton pRipple icon="pi pi-map-marker" class="p-button-rounded p-button-success" (click)="null" *ngIf="orcamento.status === 'APROVADO'"></button>
+                                <button pButton pRipple icon="pi pi-map-marker" class="p-button-rounded p-button-success" (click)="onMarcarInstalacao(orcamento)" *ngIf="orcamento.status === 'APROVADO' && orcamento.status !== 'INSTALACAO_CRIADA'"></button>
                             </div>
                         </td>
                     </tr>
@@ -157,6 +157,108 @@
                         <small class="ng-dirty ng-invalid" *ngIf="submitted && !orcamento.valor">Insira um valor</small>
                     </div>
                 </div>
+            </ng-template>
+        </p-dialog>
+
+        <p-dialog [(visible)]="instalacaoDialog" [style]="{width: '1200px'}" [modal]="true" class="p-fluid" [maximizable]=true>
+            <ng-template pTemplate="content">
+                <div class="formgrid grid">
+                    <div class="col-12">
+                        <h5>Dados cliente</h5>
+                    </div>
+                    <div class="field col-6 mt-3 mt-3">
+                        <span class="p-float-label">
+                            <input type="text" id="inputNome" pInputText [(ngModel)]="cliente.nome" required autofocus [ngClass]="{'ng-invalid ng-dirty' : submitted && !cliente.nome}" [disabled]="true">
+                            <label for="inputNome">Nome do cliente*</label>
+                        </span>
+                        <small class="ng-dirty ng-invalid" *ngIf="submitted && !cliente.nome">Insira um nome</small>
+                    </div>
+                    <div class="field col-6 mt-3 mt-3">
+                        <span class="p-float-label">
+                            <p-inputMask [unmask]="true" id="inputCpf" [(ngModel)]="cliente.cpf" inputValor ></p-inputMask>
+                            <label for="inputCpf">CPF</label>
+                        </span>
+                    </div>
+                    <div class="field col-6 mt-3 mt-3">
+                        <span class="p-float-label">
+                            <p-inputMask [disabled]="true" [unmask]="true" id="inputTelefone" [(ngModel)]="cliente.telefone" [required]=true placeholder="(99) 99999-9999" mask="(99) 99999-9999" [ngClass]="{'ng-invalid ng-dirty' : submitted && !cliente.telefone}" ></p-inputMask>
+                            <label for="inputTelefone">Telefone*</label>
+                        </span>
+                        <small class="ng-dirty ng-invalid" *ngIf="submitted && !cliente.telefone">Insira um telefone</small>
+                    </div>
+                    <div class="field col-6 mt-3 mt-3">
+                        <span class="p-float-label">
+                            <input [disabled]="true" type="text" id="inputEmail" pInputText [(ngModel)]="cliente.email" >
+                            <label for="inputEmail">Email</label>
+                        </span>
+                    </div>
+                    <div class="col-12 mt-3">
+                        <h5>Endereço</h5>
+                    </div>
+                    <div class="field col-6 mt-3">
+                        <span class="p-float-label">
+                            <input [disabled]="true" maxlength="9" type="text" id="CepVisitaInputEditDialog" pInputText [(ngModel)]="endereco.cep" (blur)="onCepSelected()" >
+                            <label for="CepVisitaInputEditDialog">CEP</label>
+                        </span>
+                    </div>
+                    <div class="field col-6 mt-3">
+                        <span class="p-float-label">
+                            <input [disabled]="true" type="text" id="RuaVisitaInputEditDialog" pInputText [(ngModel)]="endereco.rua" [ngClass]="{'ng-invalid ng-dirty' : submitted && !endereco.rua}" >
+                            <label for="RuaVisitaInputEditDialog">Rua*</label>
+                        </span>
+                        <small class="ng-dirty ng-invalid" *ngIf="submitted && !endereco.rua">Defina uma rua para o atendimento.</small>
+                    </div>
+                    <div class="field col-6 mt-3">
+                        <span class="p-float-label">
+                            <input [disabled]="true" maxlength="5" type="number" id="NúmeroVisitaInputEditDialog" pInputText [(ngModel)]="endereco.numero" [ngClass]="{'ng-invalid ng-dirty' : submitted && !endereco.rua}" >
+                            <label for="NúmeroVisitaInputEditDialog">Número*</label>
+                        </span>
+                        <small class="ng-dirty ng-invalid" *ngIf="submitted && !endereco.rua">Defina um número para o atendimento.</small>
+                    </div>
+                    <div class="field col-6 mt-3">
+                        <span class="p-float-label">
+                            <input [disabled]="true" type="text" id="BairroVisitaInputEditDialog" pInputText [(ngModel)]="endereco.bairro" [ngClass]="{'ng-invalid ng-dirty' : submitted && !endereco.bairro}" >
+                            <label for="BairroVisitaInputEditDialog">Bairro*</label>
+                        </span>
+                        <small class="ng-dirty ng-invalid" *ngIf="submitted && !endereco.bairro">Defina um bairro para o atendimento.</small>
+                    </div>
+                    <div class="field col-6 mt-3">
+                        <span class="p-float-label">
+                            <input [disabled]="true" type="text" id="CidadeVisitaInputEditDialog" pInputText [(ngModel)]="endereco.cidade" [ngClass]="{'ng-invalid ng-dirty' : submitted && !endereco.cidade}" >
+                            <label for="CidadeVisitaInputEditDialog">Cidade*</label>
+                        </span>
+                        <small class="ng-dirty ng-invalid" *ngIf="submitted && !endereco.cidade">Defina uma cidade para o atendimento.</small>
+                    </div>
+                    <div class="field col-6 mt-3">
+                        <span class="p-float-label">
+                            <input [disabled]="true" type="text" id="UfVisitaInputEditDialog" pInputText [(ngModel)]="endereco.uf" [ngClass]="{'ng-invalid ng-dirty' : submitted && !endereco.uf}" >
+                            <label for="UfVisitaInputEditDialog">UF*</label>
+                        </span>
+                        <small class="ng-dirty ng-invalid" *ngIf="submitted && !endereco.uf">Defina um estado para o atendimento.</small>
+                    </div>
+                    <div class="col-12 mt-3">
+                        <h5>Detalhes Instalação</h5>
+                    </div>
+                    <div class="field col-6 mt-3" >
+                        <span class="p-float-label">
+                            <p-calendar selectionMode="range" [showTime]="true" dateFormat="dd/mm/yy" [showIcon]="true" id="inputDataVisita" [(ngModel)]="instalacao.dataInstalacao" [required] = true [ngClass]="{'ng-invalid ng-dirty' : submitted && !instalacao.dataInstalacao}" ></p-calendar>
+                            <label for="inputDataVisita">Data da instalação*</label>
+                        </span>
+                        <small class="ng-dirty ng-invalid" *ngIf="submitted && !instalacao.dataInstalacao">Insira uma data</small>
+                    </div>
+                    <div class="field col-12 mt-3" >
+                        <span class="p-float-label">
+                            <textarea rows="4" pInputTextarea id="inputDataVisita" [(ngModel)]="instalacao.descricao" [required] = true [ngClass]="{'ng-invalid ng-dirty' : submitted && !instalacao.dataInstalacao}" ></textarea>
+                            <label for="inputDataVisita">Descrição instalação</label>
+                        </span>
+                        <small class="ng-dirty ng-invalid" *ngIf="submitted && !instalacao.dataInstalacao">Insira uma data</small>
+                    </div>
+                </div>
+            </ng-template>
+
+            <ng-template pTemplate="footer">
+                <button pButton pRipple label="Cancelar" icon="pi pi-times" class="p-button-text p-button-secondary"  (click)="instalacaoDialog = false"></button>
+                <button pButton pRipple label="Salvar" icon="pi pi-check" class="p-button-text p-button-success"  (click)="saveInstalacao()"></button>
             </ng-template>
         </p-dialog>
 
