--- a/src/app/solicitacao-servico/orcamento-page/orcamento-page.component.html
+++ b/src/app/solicitacao-servico/orcamento-page/orcamento-page.component.html
@@ -19,7 +19,7 @@
                         <th pSortableColumn="cliente.telefone">Telefone <p-sortIcon field="cliente.telefone"></p-sortIcon></th>
                         <th pSortableColumn="cliente.endereco">Endereço <p-sortIcon field="cliente.endereco"></p-sortIcon></th>
                         <th pSortableColumn="visita.data">Data Visita <p-sortIcon field="data"></p-sortIcon></th>
-                        <th pSortableColumn="visita.descricao">Descrição <p-sortIcon field="descricao"></p-sortIcon></th>
+                        <th pSortableColumn="observacao">Observação <p-sortIcon field="observacao"></p-sortIcon></th>
                         <th pSortableColumn="valor">Valor Orçamento <p-sortIcon field="valor"></p-sortIcon></th>
                         <th pSortableColumn="status">Status<p-sortIcon field="status"></p-sortIcon></th>
                         <th></th>
@@ -46,8 +46,8 @@
                             {{orcamento.visita.dataVisita | date: 'dd/MM/yyyy'}}
                         </td>
                         <td style="width:16%; min-width:12rem;">
-                            <span class="p-column-title">Descrição</span>
-                            {{orcamento.visita.descricao}}
+                            <span class="p-column-title">Observação</span>
+                            {{orcamento.observacao ? orcamento.observacao : 'Sem observação'}}
                         </td>
                         <td style="width:16%; min-width:12rem;">
                             <span class="p-column-title">Valor Orçamento</span>
@@ -155,6 +155,12 @@
                             <label for="inputValor">Valor Orçamento</label>
                         </span>
                         <small class="ng-dirty ng-invalid" *ngIf="submitted && !orcamento.valor">Insira um valor</small>
+                    </div>
+                    <div class="field col-12 mt-4">
+                        <span class="p-float-label">
+                            <textarea  rows="5" cols="30" id="inputObservacaoOrcamento" pInputTextarea [(ngModel)]="orcamento.observacao" [disabled]="true"></textarea>
+                            <label for="inputObservacaoOrcamento">Observação orçamento</label>
+                        </span>
                     </div>
                 </div>
             </ng-template>
